# gpu-cuda-la-7eme-compagnie

./: CMakeLists.txt  QTProjectAppli_7ecompagnie.sln  README.md  fichier.txt
QTProjectAppli_7ecompagnie/: QTProjectAppli_7ecompagnie.cpp  QTProjectAppli_7ecompagnie.h  QTProjectAppli_7ecompagnie.qrc  QTProjectAppli_7ecompagnie.ui  QTProjectAppli_7ecompagnie.vcxproj  QTProjectAppli_7ecompagnie.vcxproj.filters  main.cpp  test.txt
lib/: backend_factory.cpp  compute.hpp  compute_cpu.cpp  compute_cuda.cu  particles_types.hpp  sim_world.cpp  sim_world.hpp
src/: check_headers.cpp  hello__cuda.CU  hello_build.cpp  hello_cuda.cu  test_cpu_only.cpp  test_perf.cpp  test_world.cpp
